added: create user for admin, sign-in,sign-up, token for routes
