# pkg/handler/adminAuth.go
@@ -6,6 +6,7 @@ import (
 	"API/pkg/models"
 
 	"github.com/gin-gonic/gin"
+	"golang.org/x/crypto/bcrypt"
 )
 
 // @Summary		admin sign-up
@@ -56,20 +57,43 @@ func (h *Handler) AdminSignUp(c *gin.Context) {
 
 // @Summary		admin sign-in
 // @Description	Just a test route to check Swagger generation
-// @Tags			Test
-// @Success		200	{string}	string	"OK"
+// @Tags		Admin
+// @Accept 		json
+// @Produce 	json
+// @Param		input	body	models.AdminRequest	true	"Admin credentials"
+// @Success		200		{object}	map[string]string	"token"
+// @Failure		400		{object}	map[string]string	"Bad Request"
+// @Failure		500		{object}	map[string]string	"Internal Server Error"
 // @Router			/admin/auth/sign-in [post]
 func (h *Handler) AdminSignIn(c *gin.Context) {
 	var input models.AdminRequest
 
 	if err := c.BindJSON(&input); err != nil {
 		newErrorResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	admin, err := h.service.GetAdmin(input.Email)
+	if err != nil {
+		newErrorResponse(c, http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	if admin == nil {
+		newErrorResponse(c, http.StatusNotFound, "Admin not found")
+		return
+	}
+
+	if err := bcrypt.CompareHashAndPassword([]byte(admin.Password), []byte(input.Password)); err != nil {
+		newErrorResponse(c, http.StatusUnauthorized, "Invalid password")
+		return
 	}
 
 	token, err := h.service.Authorization.GenerateToken(input.Email, input.Password)
 	if err != nil {
 		newErrorResponse(c, http.StatusInternalServerError, err.Error())
 	}
+
 	c.JSON(http.StatusOK, map[string]interface{}{
 		"token": token,
 	})
@@ -80,6 +104,6 @@ func (h *Handler) AdminSignIn(c *gin.Context) {
 // @Tags			Test
 // @Success		200	{string}	string	"OK"
 // @Router			/admin/auth/test [post]
-func (h *Handler) TestRoute(c *gin.Context) {
-	c.JSON(http.StatusOK, "OK")
-}
+// func (h *Handler) TestRoute(c *gin.Context) {
+// 	c.JSON(http.StatusOK, "OK")
+// }
