# pkg/handler/handler.go
@@ -4,6 +4,7 @@ import (
 	_ "API/docs"
 	"API/pkg/service"
 
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
@@ -22,7 +23,16 @@ func NewHandler(services *service.Service) *Handler {
 func (h *Handler) InitRoutes() *gin.Engine {
 	router := gin.New()
 
-	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	router.Use(cors.New(cors.Config{
+		AllowOrigins:     []string{"*"}, // Разрешает запросы от всех источников
+		AllowMethods:     []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+		AllowHeaders:     []string{"Origin", "Content-Type", "Authorization"},
+		ExposeHeaders:    []string{"Content-Length"},
+		AllowCredentials: true,
+	}))
+
+	// router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, ginSwagger.PersistAuthorization(true)))
 
 	auth := router.Group("/auth")
 	{
@@ -35,15 +45,14 @@ func (h *Handler) InitRoutes() *gin.Engine {
 
 		adminAuth.POST("/sign-up", h.AdminSignUp)
 		adminAuth.POST("/sign-in", h.AdminSignIn)
-		adminAuth.POST("/test", h.TestRoute)
 	}
 
 	api := router.Group("/api", h.userIdentity)
 	{
 		users := api.Group("/users")
 		{
-			users.POST("/", h.createUser)
-			users.GET("/", h.getUsers)
+			users.POST("/create-user", h.createUser)
+			users.GET("/user-list", h.getUsers)
 			users.GET("/:id", h.getUserByID)
 			users.PUT("/:id", h.updateUser)
 			users.DELETE("/:id", h.deleteUser)
